fix(Global): Wrong font-family for all icons

--- a/client/app/common/less/common.less
+++ b/client/app/common/less/common.less
@@ -1,5 +1,9 @@
 @text-disabled-color: #757575;
 
+.ovh-font {
+    font-family: "ovh-font";
+}
+
 .no-wrap {
     white-space: nowrap;
 }
